Tests/CompilerTests/negative/static-call.expected
negative/static-call.hylo:5.26-27: error: T expects 1 type argument(s)
fun f2<T :: * -> *>() -> T {}
                         ^
negative/static-call.hylo:8.3-5: error: 'f0' takes no compile-time arguments
  f0<Void>(x: ())
  ~~
negative/static-call.hylo:11.15-20: error: cannot pass value of type '{Void}' to parameter 'Void'
  f1<Void>(x: ((),))
              ~~~~~
negative/static-call.hylo:12.3-5: error: 'f1' takes 1 compile-time argument(s); found 2
  f1<Void, Void>(x: ())
  ~~
